--- a/views/login1.ejs
+++ b/views/login1.ejs
@@ -43,11 +43,11 @@
                     document.forms["signUpForm"].reset();
                     //document.getElementsByName("signUpForm").submit();
                 }else{
-                    alert("You are successfully registered! \n Pleas Login to proceed.");
+                    //alert("You are successfully registered! \n Pleas Login to proceed.");
                 }
             }
             //sleep(1000);
-            alert("You are successfully registered! \n Please Login to proceed.");
+            //alert("You are successfully registered! \n Please Login to proceed.");
         }
 
         xhttp.send(JSON.stringify(details));
@@ -131,7 +131,7 @@
                     <input type="password"required autocomplete="off" id="passSignup"/>
                 </div>
 
-                <button  class="button button-block" onclick="registerUser()"/>Get Started</button>
+                <button  class="button button-block" onclick="registerUser()" />Get Started</button>
 
             </form>
 
@@ -158,7 +158,7 @@
 
                 <p class="forgot"><a href="#">Forgot Password?</a></p>
 
-                <button class="button button-block" onClick="checkLogin()"/>Log In</button>
+                <button class="button button-block" onClick="checkLogin()" />Log In</button>
 
             </form>
 
