--- a/views/Charts.ejs
+++ b/views/Charts.ejs
@@ -103,7 +103,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="dropdown">
+            <!--<li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
                 <ul class="dropdown-menu alert-dropdown">
                     <li>
@@ -129,7 +129,7 @@
                         <a href="#">View All</a>
                     </li>
                 </ul>
-            </li>
+            </li>-->
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
                 <ul class="dropdown-menu">
@@ -208,15 +208,15 @@
             <!-- /.row -->
 
             <!-- Flot Charts -->
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-lg-12">
                     <h2 class="page-header">Flot Charts</h2>
                     <p class="lead">Flot is a pure JavaScript plotting library for jQuery, with a focus on simple usage, attractive looks and interactive features. For full usage instructions and documentation for Flot Charts, visit <a href="http://www.flotcharts.org/">http://www.flotcharts.org/</a>.</p>
                 </div>
-            </div>
+            </div>-->
             <!-- /.row -->
 
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
@@ -229,10 +229,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <!-- /.row -->
 
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-lg-4">
                     <div class="panel panel-green">
                         <div class="panel-heading">
@@ -248,7 +248,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-8">
+                &lt;!&ndash;<div class="col-lg-8">
                     <div class="panel panel-yellow">
                         <div class="panel-heading">
                             <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Multiple Axes Line Graph Example with Tooltips and Raw Data</h3>
@@ -262,11 +262,11 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
+                </div>&ndash;&gt;
+            </div>-->
             <!-- /.row -->
 
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-lg-6">
                     <div class="panel panel-red">
                         <div class="panel-heading">
@@ -297,7 +297,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <!-- /.row -->
 
             <!-- Morris Charts -->
@@ -337,7 +337,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <!--<div class="col-lg-4">
                     <div class="panel panel-red">
                         <div class="panel-heading">
                             <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Line Graph Example with Tooltips</h3>
@@ -349,8 +349,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4">
+                </div>-->
+                <!--<div class="col-lg-4">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Bar Graph Example</h3>
@@ -362,7 +362,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
             <!-- /.row -->
 
