--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -202,6 +202,9 @@
                     <li>
                         <a href="forms"><i class="fa fa-fw fa-edit"></i> Create Project</a>
                     </li>
+                    <li>
+                        <a href="Charts"><i class="fa fa-fw fa-dashboard"></i> Charts</a>
+                    </li>
 
                 </ul>
             </div>
