--- a/views/projectlist.ejs
+++ b/views/projectlist.ejs
@@ -187,6 +187,9 @@
                     <li>
                         <a href="forms"><i class="fa fa-fw fa-edit"></i> Create Project</a>
                     </li>
+                    <li>
+                        <a href="Charts"><i class="fa fa-fw fa-edit"></i> Charts</a>
+                    </li>
 
                 </ul>
             </div>
