--- a/views/forms.ejs
+++ b/views/forms.ejs
@@ -174,6 +174,9 @@
                 <li class="active">
                     <a href="forms"><i class="fa fa-fw fa-edit"></i> Create Projects</a>
                 </li>
+                <li>
+                    <a href="Charts"><i class="fa fa-fw fa-dashboard"></i> Charts</a>
+                </li>
 
 
             </ul>
