--- a/views/Charts.ejs
+++ b/views/Charts.ejs
@@ -164,6 +164,9 @@
                 <li>
                     <a href="Charts"><i class="fa fa-fw fa-edit"></i> Charts</a>
                 </li>
+                <li>
+                    <a href="timeline"><i class="fa fa-fw fa-dashboard"></i> Timeline</a>
+                </li>
                 <!--    <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Dropdown <i class="fa fa-fw fa-caret-down"></i></a>
                     <ul id="demo" class="collapse">
                         <li>
