--- a/views/forms.ejs
+++ b/views/forms.ejs
@@ -177,6 +177,9 @@
                 <li>
                     <a href="Charts"><i class="fa fa-fw fa-dashboard"></i> Charts</a>
                 </li>
+                <li>
+                    <a href="timeline"><i class="fa fa-fw fa-dashboard"></i> Timeline</a>
+                </li>
 
 
             </ul>
