--- a/views/projectlist.ejs
+++ b/views/projectlist.ejs
@@ -190,6 +190,9 @@
                     <li>
                         <a href="Charts"><i class="fa fa-fw fa-edit"></i> Charts</a>
                     </li>
+                    <li>
+                        <a href="timeline"><i class="fa fa-fw fa-dashboard"></i> Timeline</a>
+                    </li>
 
                 </ul>
             </div>
