--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -45,7 +45,7 @@
     xhttp.open("GET", "/projects", false);
     xhttp.setRequestHeader("Content-type", "application/json");
     xhttp.send();
-    document.getElementById("getprojects").innerHTML = response.length;*/
+    document.getElementById("getprojects").innerHTML = response.length;
     console.log(response);
       $('#table').bootstrapTable({
         data: response
@@ -125,8 +125,9 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Project TimeLines <small> Overview</small>
+                            Project TimeLines
                         </h1>
+
 
                     </div>
                 </div>
